fixed alignment bug

--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
    </head>
-   <body  style="min-width:500px;">
+   <body>
       <div id="zoom">
          <button id="zoom_up" class="pure-button"><i class="fa fa-plus"></i></button>
          <br>
          <button id="zoom_down" class="pure-button"><i class="fa fa-minus"></i></button>
       </div>
       <div id="phone">
-      <img src="assets/phone.png" style="">
-      <div id="offset">
-         <iframe id="website" ></iframe>
+        <img src="assets/phone.png" style="">
+        <div id="offset">
+           <iframe id="website" ></iframe>
+        </div>
       </div>
- </div>
       <script type="text/javascript" src="set_url.js"></script>
       <script type="text/javascript" src="js/zoom.js"></script>
    </body>
