--- a/index.html
+++ b/index.html
@@ -13,18 +13,22 @@
      made by Romero (heyimrm.co.uk) ;)
      -->
       <meta charset="utf-8" />
-      <title> Mobile Emulator </title>
+      <title>Mobile Emulator</title>
       <link rel="stylesheet" type="text/css" href="css/style.css">
       <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
+      <link href='http://fonts.googleapis.com/css?family=Arvo' rel='stylesheet' type='text/css'>
       <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-
    </head>
    <body>
       <div id="zoom">
          <button id="zoom_up" class="pure-button"><i class="fa fa-plus"></i></button>
          <br>
          <button id="zoom_down" class="pure-button"><i class="fa fa-minus"></i></button>
+      </div>
+      <div id="notice" style="display:none;">
+      <h1>This Emulator works best in <a href="http://www.google.com/chrome/" target="_blank">Google Chrome</a>.</h1>
+      <button class="pure-button" id="notice_btn">Hide Notice</button>
       </div>
       <div id="phone">
         <img src="assets/phone.png" style="">
@@ -34,5 +38,6 @@
       </div>
       <script type="text/javascript" src="set_url.js"></script>
       <script type="text/javascript" src="js/zoom.js"></script>
+      <script type="text/javascript" src="js/check.js"></script>
    </body>
 </html>
