--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>  
 <html>
    <head>
-     <!--
-     _                  _                            
-     | |                (_)                           
-     | |__   ___ _   _   _ _ __ ___    _ __ _ __ ___  
-     | '_ \ / _ \ | | | | | '_ ` _ \  | '__| '_ ` _ \ 
-     | | | |  __/ |_| | | | | | | | | | |  | | | | | |
-     |_| |_|\___|\__, | |_|_| |_| |_| |_|  |_| |_| |_|
-                 __/ |                               
-                |___/                                
-     made by Romero (heyimrm.co.uk) ;)
-     -->
+      <!--
+         _                  _                            
+         | |                (_)                           
+         | |__   ___ _   _   _ _ __ ___    _ __ _ __ ___  
+         | '_ \ / _ \ | | | | | '_ ` _ \  | '__| '_ ` _ \ 
+         | | | |  __/ |_| | | | | | | | | | |  | | | | | |
+         |_| |_|\___|\__, | |_|_| |_| |_| |_|  |_| |_| |_|
+                     __/ |                               
+                    |___/                                
+         made by Romero (heyimrm.co.uk) ;)
+         -->
       <meta charset="utf-8" />
       <title>Mobile Emulator</title>
       <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -21,23 +21,26 @@
       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
    </head>
    <body>
-      <div id="zoom">
+      <div id="controls">
          <button id="zoom_up" class="pure-button"><i class="fa fa-plus"></i></button>
-         <br>
          <button id="zoom_down" class="pure-button"><i class="fa fa-minus"></i></button>
+         <div id="line"></div>
+         <button id="reload" class="pure-button"><i class="fa fa-refresh" id="refresh"></i></button>
+         <button id="go_back" class="pure-button"><i class="fa fa-chevron-left" id="l"></i></button>
+         <button id="go_forward" class="pure-button"><i class="fa fa-chevron-right" id="r"></i></button>
       </div>
       <div id="notice" style="display:none;">
-      <h1>This Emulator works best in <a href="http://www.google.com/chrome/" target="_blank">Google Chrome</a>.</h1>
-      <button class="pure-button" id="notice_btn">Hide Notice</button>
+         <h1>This Emulator works best in <a href="http://www.google.com/chrome/" target="_blank">Google Chrome</a>.</h1>
+         <button class="pure-button" id="notice_btn" style="width: 123px;">Hide Notice</button>
       </div>
       <div id="phone">
-        <img src="assets/phone.png" style="">
-        <div id="offset">
-           <iframe id="website" ></iframe>
-        </div>
+         <img id="img" src="assets/img_portrait.png" class="img_portrait">
+         <div id="offset">
+            <iframe id="website" class="iframe_portrait"></iframe>
+         </div>
       </div>
       <script type="text/javascript" src="set_url.js"></script>
-      <script type="text/javascript" src="js/zoom.js"></script>
+      <script type="text/javascript" src="js/controls.js"></script>
       <script type="text/javascript" src="js/check.js"></script>
    </body>
 </html>
